# agent-support

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  discuss.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  spec.md
.github/workflows/: ci.yaml  ci.yml  deploy.yaml
adapters/telegram-bot/: package.json  tsconfig.json
alembic/: env.py  script.py.mako
alembic/versions/: 7b3d2e8f9a10_p1_tenant_control_plane.py  a3f5c8e12d47_p2_platform_ingest.py  b25d38b0cd7c_initial_schema.py  b4f6d9c1e23f_p3_agent_harness_runtime.py  (+1 more)
app/: main.py  worker.py
app/core/: cache.py  kms.py  (+5 more)
config/: local-env.template
core/: __init__.py  config.py  constants.py
docs/: README.md  code-standards.md  coding-rules.md  configuration.md  database.md  implementation-flow.md  production-spec.md  system-architecture.md  task-breakdown.md  technical-plan.md  validation-checklist.md
docs-spec/: docker.md  project-roadmap.md
evals/: evaluator.py  helpers.py  main.py
infra/: README.md  docker-compose.yml
scripts/: build-docker.sh  check_secret_scan.py  docker-entrypoint.sh  run-docker.sh
template-rebuild-docs/: adapters-and-integrations.md  core-agent-design.md  data-persistence-and-isolation.md  domain-and-tenant-model.md  observability-evaluation-and-operations.md  product-requirements.md  project-brief.md  rebuild-roadmap-and-validation.md  security-and-auditability.md  target-architecture-on-template.md
tests/: test_p0_infra.py  test_p1_tenant_control_plane.py  test_p1_tenant_isolation.py
(+318 files in other folders)
