[project]
name = "agent-support"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.123.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "httpx>=0.28.1",
    "httpx2>=2.2.0",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[project.scripts]
agent-support-api = "core.api.main:run"
agent-support-worker-stub = "core.workers.message_stub:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require local services",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["core"]
